--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -62,22 +62,21 @@
                         <div class="layui-col-xs4 layui-col-sm4 layui-col-md4" style="text-align: center;">
                             <img src="/images/logo.png"/>
                         </div>
-                        <div class="layui-row layui-col-space5" style="margin-top: 10px;">
+                        <div class="layui-col-space5" style="margin-top: 10px;" th:classappend="${role==5?'layui-hide':''}">
                             <hr/>
-                            <div class="layui-col-xs6">
-                                <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-purple">
-                                    <i class="layui-icon layui-icon-play"></i> 进入答题室
+                            <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                                <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-red">
+                                    <i class="layui-icon layui-icon-edit"></i> 阅卷
                                 </button>
                             </div>
-                            <div class="layui-col-xs6">
+                            <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
                                 <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-orange">
                                     <i class="layui-icon layui-icon-file-b"></i> 报告
                                 </button>
                             </div>
                         </div>
-                        <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-red"
-                                th:classappend="${role==5?'layui-hide':''}">
-                            <i class="layui-icon layui-icon-edit"></i> 阅卷
+                        <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-purple">
+                            <i class="layui-icon layui-icon-play"></i> 进入答题室
                         </button>
                     </div>
                 </div>
@@ -97,6 +96,21 @@
         });
         form.on('submit(search)', function (obj) {
             console.log(obj.field);
+        });
+
+        $('.rooms').on('click', '.layui-btn', function (e) {
+            e.stopPropagation();
+            var $btn = $(this);
+            var $card = $btn.closest('.layui-card');
+            var roomId = $card.parent().data('roomId');
+            if ($btn.hasClass('layui-border-purple')) {
+                console.log("答题室" + roomId)
+                window.location.href = "/room?id=" + roomId;
+            } else if ($btn.hasClass('layui-border-orange')) {
+                console.log("报告" + roomId)
+            } else if ($btn.hasClass('layui-border-red')) {
+                console.log("阅卷" + roomId)
+            }
         });
     });
 </script>
