--- a/src/main/resources/templates/front/learns.html
+++ b/src/main/resources/templates/front/learns.html
@@ -4,31 +4,33 @@
 <body>
 <th:block th:include="include :: f_header"></th:block>
 <div class="layui-container layui-fluid">
-    <form lay-filter="searchForm" class="layui-row layui-card layui-form">
-        <div class="layui-card-header" style="background-color: #E2E2E2">分类筛选</div>
-        <div class="layui-card-body">
-            <div class="layui-form-item">
-                <label class="layui-form-label">科目分类：</label>
-                <div class="layui-input-block">
-                    <input type="hidden" name="pid" th:value="${pid}"/>
-                    <span class="filter-tag active" data-pid="">全部</span>
-                    <span class="filter-tag" th:each="screen : ${screens}" th:data-pid="${screen.id}" th:text="${screen.name}">分类名</span>
+    <div class="layui-row search-section">
+        <form lay-filter="searchForm" class="layui-card layui-form">
+            <div class="layui-card-header" style="background-color: #E2E2E2">分类筛选</div>
+            <div class="layui-card-body">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">科目分类：</label>
+                    <div class="layui-input-block">
+                        <input type="hidden" name="pid" th:value="${pid}"/>
+                        <span class="filter-tag active" data-pid="">全部</span>
+                        <span class="filter-tag" th:each="screen : ${screens}" th:data-pid="${screen.id}" th:text="${screen.name}">分类名</span>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-col-xs12 layui-col-sm10 layui-col-md10">
+                        <i class="layui-icon layui-icon-search index-icon-search"></i>
+                        <input type="text" name="title" th:value="${title}" class="layui-input index-input" placeholder="搜索答题室内容..."/>
+                        <button type="button" id="resetBtn" class="layui-btn layui-btn-primary layui-btn-sm index-search">×</button>
+                    </div>
+                    <div class="layui-col-xs12 layui-col-sm2 layui-col-md2">
+                        <button class="layui-btn layui-btn-fluid layui-bg-purple" id="search" lay-submit lay-filter="search">
+                            <i class="layui-icon">&#xe615; 搜索</i>
+                        </button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="layui-row layui-col-space10">
-            <div class="layui-col-xs12 layui-col-sm10 layui-col-md10">
-                <i class="layui-icon layui-icon-search index-icon-search"></i>
-                <input type="text" name="title" th:value="${title}" class="layui-input index-input" placeholder="搜索答题室内容..."/>
-                <button type="button" id="resetBtn" class="layui-btn layui-btn-primary layui-btn-sm index-search">×</button>
-            </div>
-            <div class="layui-col-xs12 layui-col-sm2 layui-col-md2">
-                <button class="layui-btn layui-btn-fluid layui-bg-purple" id="search" lay-submit lay-filter="search">
-                    <i class="layui-icon">&#xe615; 搜索</i>
-                </button>
-            </div>
-        </div>
-    </form>
+        </form>
+    </div>
     <div class="layui-row layui-card">
         <div class="layui-card-header" style="background-color: #E2E2E2">
             <i class="layui-icon">&#xe705; 学习内容列表</i>
