--- a/src/main/resources/templates/front/comments.html
+++ b/src/main/resources/templates/front/comments.html
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="include :: head('做题吧 - 首页')"></head>
+<head th:include="include :: head('做题吧 - 留言')"></head>
 <body>
 <th:block th:include="include :: f_header"></th:block>
 <div class="layui-container layui-fluid">
-    <div class="layui-row layui-card ">
+    <div class="layui-row layui-card">
         <form lay-filter="searchForm" class="layui-form">
             <div class="layui-card-body">
                 <div class="layui-row layui-col-space10">
