--- a/src/main/resources/templates/front/learns.html
+++ b/src/main/resources/templates/front/learns.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="include :: head('做题吧 - 首页')"></head>
+<head th:include="include :: head('做题吧 - 学库')"></head>
 <body>
 <th:block th:include="include :: f_header"></th:block>
 <div class="layui-container layui-fluid">
