--- a/src/main/resources/templates/admin/welcome.html
+++ b/src/main/resources/templates/admin/welcome.html
@@ -1,16 +1,6 @@
 ﻿<!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <title text="我的桌面"></title>
-    <meta charset="utf-8"/>
-    <meta name="renderer" content="webkit|ie-comp|ie-stand"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,user-scalable=no"/>
-    <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <link rel="apple-touch-icon" sizes="180x180" th:href="@{/favicon.ico}"/>
-    <link rel="icon" type="image/png" sizes="32x32" th:href="@{/favicon.ico}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/layui.css}"/>
-</head>
+<head th:include="include :: head('我的桌面')"></head>
 <body>
 <div class="layui-row">
     <!-- 欢迎信息 -->
@@ -96,25 +86,6 @@
         var hours = Math.floor((totalSeconds % (24 * 3600)) / 3600); //计算出小时数
         document.getElementById("runTime").innerHTML = days + "天 " + hours + "小时 ";
     }
-
-    // 对Date的扩展，将 Date 转化为指定格式的String
-    // 月(M)、日(d)、小时(h)、分(m)、秒(s)、季度(q) 可以用 1-2 个占位符，
-    // 年(y)可以用 1-4 个占位符，毫秒(S)只能用 1 个占位符(是 1-3 位的数字)
-    // 例子：(new Date()).Format("yyyy-MM-dd hh:mm:ss.S") ==> 2006-07-02 08:09:04.423
-    Date.prototype.Format = function (fmt) {
-        var o = {
-            "M+": this.getMonth() + 1, //月份
-            "d+": this.getDate(), //日
-            "H+": this.getHours(), //小时
-            "m+": this.getMinutes(), //分
-            "s+": this.getSeconds(), //秒
-            "q+": Math.floor((this.getMonth() + 3) / 3), //季度
-            "S": this.getMilliseconds() //毫秒
-        };
-        if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
-        for (var k in o) if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
-        return fmt;
-    };
 
     setInterval(function () {
         document.getElementById("clock").innerHTML = new Date().Format("yyyy-MM-dd HH:mm:ss");
